# DLS

./: CMakeLists.txt
include/: .dls.h.swp  dls.h
include/simplenet/: Dataset.h  funcs.h
src/: .dls.cpp.swp  .dls_test.cpp.swp  .dls_train.cpp.swp  dls.cpp  dls_test.cpp  dls_train.cpp
src/net/: .Net.cpp.swp  Dataset.cpp  Layer.cpp  Net.cpp  evaluate.cpp  funcs.cpp  train.cpp
